25/03 - Vitor F. - dimensionamento da tela padrão 1440x1024; dimensionamento ante
posição do div central x:400px, y:0, width:480, height:1024;
observar com Sudo o problema de exibição em outras resoluções;

26/03 - Vitor F. - refarei BG para dimensionamento 16:9 (figma me deu dimensões antigas);
problema de exibição em outras resoluções segue ativo;

26/03 - Vitor F. - refeito BG e inserido na página inicial.
Arquivo "BGrugby.ball.PNG" depreciado em favor de "BGrugby.ball.gif".
"Problema" da resolução relativamente solucionado: ChatGPT sugere usar
posicionamentos relativos, não absolutos (como x=100px), onde x=90% de
outro elemento, preservando a escala dos objetos.

28/03 - Claudio S. - criação da estrutura flex; com tags de página padrão;

09/04 
- Vitor F. - "Merge successeful" - Necessário que se adicione no arquivo "~/propriedades/js" 
os códigos em JS. Quanto às mudanças de hoje no arquivo, se trata de um merge que foi 
feito anteriormente por mim e Nicolas Aquino porém upado no repositório "Nickaqui/hardstop".

10/04 - Claudio S. Update README.md conceituando o readme com os elementos precisos do projeto.

11/04 - Claudio S. - Layout base html e css.

16/04 - Claudio P. - adicionado o funcionamento do botão de avanço de página e criado o arquivo base.html 
para ser usado como modelo para criação das páginas.

17/04 - Claudio P. - alterado o texto e alterações do layout da página de login

23/04 - Claudio S. - junção com sistema js, para acessar o banco de dados; teste de server.

24/04 - Claudio S.  - Pagina de questôes; finalização e teste de login.,

26/04 - Vitor F. - Inspeção e organização das classes e ids de CSS e HTML, display, etc., planejamento
para a adição dos sites institucionais.