@@ -42,11 +42,15 @@
         <a href="#"></a> 
 
         <a href="#" target="_blank">
-          <img src="./miscelaneo/cps_logo.jpg"/>
+          <img 
+          src="./miscelaneo/cps_logo.jpg"
+          style="height: 40px;"/>
         </a>
 
-        <a id="ftclg" href="#" target="_blank">
-          <img src="./miscelaneo/fatec_logo.png">
+        <a href="#" target="_blank">
+          <img 
+          src="./miscelaneo/fatec_logo.png"
+          style="height: 40px;"/>
         </a>
 
       </nav>
