@@ -33,3 +33,5 @@ para ser usado como modelo para criação das páginas.
 
 26/04 - Vitor F. - Inspeção e organização das classes e ids de CSS e HTML, display, etc., planejamento
 para a adição dos sites institucionais.
+
+29/04- Vitor F. - atividade concluída, Menu com Links em index.html
